Added Java Tests